# xwaylandvideobridge

./: .flatpak-manifest.json  .flatpak-manifest.json.license  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Messages.sh  README.md  flake.nix  screenrecord.kdev4
.kdev4/: screenrecord.kdev4
.reuse/: dep5
icons/: CMakeLists.txt
po/ar/: xwaylandvideobridge.po
po/ca/: xwaylandvideobridge.po
po/ca@valencia/: xwaylandvideobridge.po
po/cs/: xwaylandvideobridge.po
po/de/: xwaylandvideobridge.po
po/en_GB/: xwaylandvideobridge.po
po/eo/: xwaylandvideobridge.po
po/es/: xwaylandvideobridge.po
po/eu/: xwaylandvideobridge.po
po/fi/: xwaylandvideobridge.po
po/fr/: xwaylandvideobridge.po
po/gl/: xwaylandvideobridge.po
po/it/: xwaylandvideobridge.po
po/ja/: xwaylandvideobridge.po
po/ka/: xwaylandvideobridge.po
po/ko/: xwaylandvideobridge.po
po/nl/: xwaylandvideobridge.po
po/nn/: xwaylandvideobridge.po
po/pl/: xwaylandvideobridge.po
po/pt/: xwaylandvideobridge.po
po/pt_BR/: xwaylandvideobridge.po
po/ro/: xwaylandvideobridge.po
po/sk/: xwaylandvideobridge.po
po/sl/: xwaylandvideobridge.po
po/sv/: xwaylandvideobridge.po
po/tr/: xwaylandvideobridge.po
po/uk/: xwaylandvideobridge.po
po/zh_CN/: xwaylandvideobridge.po
po/zh_TW/: xwaylandvideobridge.po
src/: CMakeLists.txt  PipeWireWindow.qml  RecordMe.cpp  RecordMe.h  ScreenRecord.cpp  ScreenRecord.h  contentswindow.cpp  contentswindow.h  main.cpp  org.freedesktop.portal.ScreenCast.xml  org.kde.pwbypass.appdata.xml  org.kde.pwbypass.desktop  org.kde.screenrecord.appdata.xml  org.kde.screenrecord.desktop  org.kde.xwaylandvideobridge.appdata.xml  org.kde.xwaylandvideobridge.desktop  pwbypass.cpp  pwbypass.h  pwbypass.notifyrc  resources.qrc  screenrecord.notifyrc  version.h.in  x11recordingnotifier.cpp  x11recordingnotifier.h  xwaylandvideobridge.cpp  xwaylandvideobridge.h
